--- a/app/src/main/res/layout-land/fragment_gravity.xml
+++ b/app/src/main/res/layout-land/fragment_gravity.xml
@@ -37,120 +37,129 @@
         app:physics="true"
         app:positionIterations="7"
         app:velocityIterations="4"
-        tools:layout_editor_absoluteX="0dp">
+        tools:layout_editor_absoluteX="8dp">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cv1"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
+            android:id="@+id/gravity_layout_cv1"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
 
             android:layout_gravity="top"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
-
-
             android:background="@drawable/cardborder"
             app:cardCornerRadius="5dp"
             app:cardElevation="5dp"
-
             app:layout_constraintDimensionRatio="604:875"
-
             app:layout_fixedRotation="true">
 
+
+            <ImageView
+                android:id="@+id/card1_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_card_1" />
             <RelativeLayout
                 android:id="@+id/card_1_border_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
 
-                <ImageView
-                    android:id="@+id/card1_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_1" />
-            </RelativeLayout>
+
+
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cv2"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
+            android:id="@+id/gravity_layout_cv2"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
             android:layout_gravity="top"
             android:layout_marginStart="100dp"
             android:layout_marginTop="20dp"
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="6dp"
-            app:layout_constraintDimensionRatio="604:875"
-            app:layout_fixedRotation="true"
-
-            >
-
-            <RelativeLayout
-                android:id="@+id/relative_layout2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card2_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_2" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv4"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-
-            android:layout_marginStart="180dp"
-            android:layout_marginTop="50dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="8dp"
-            app:layout_constraintDimensionRatio="604:875"
-            app:layout_fixedRotation="true"
-
-            >
-
-            <RelativeLayout
-                android:id="@+id/relative_layout4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card4_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_4" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv5"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-
-            android:layout_marginStart="190dp"
-            android:layout_marginTop="60dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="9dp"
+            app:cardElevation="5dp"
             app:layout_constraintDimensionRatio="604:875"
             app:layout_fixedRotation="true">
 
+            <ImageView
+                android:id="@+id/card2_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_card_2" />
             <RelativeLayout
-                android:id="@+id/relative_layout5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:id="@+id/card_2_border_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" />
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/gravity_layout_cv3"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
+            android:layout_marginStart="180dp"
+            android:layout_marginTop="50dp"
+            android:background="@drawable/cardborder"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:layout_constraintDimensionRatio="604:875"
+            app:layout_fixedRotation="true">
+
+
+
+            <ImageView
+                android:id="@+id/card3_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_card_3" />
+            <RelativeLayout
+            android:id="@+id/card_3_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/gravity_layout_cv4"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
+            android:layout_marginStart="190dp"
+            android:layout_marginTop="60dp"
+            android:background="@drawable/cardborder"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:layout_constraintDimensionRatio="604:875"
+            app:layout_fixedRotation="true">
+
+            <ImageView
+                android:id="@+id/card4_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:visibility="visible"
+                app:srcCompat="@drawable/ic_card_4" />
+            <RelativeLayout
+                android:id="@+id/card_4_border_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/gravity_layout_cv5"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
+
+            android:layout_marginStart="340dp"
+            android:layout_marginTop="80dp"
+            android:background="@drawable/cardborder"
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:layout_constraintDimensionRatio="604:875"
+            app:layout_fixedRotation="true">
+
 
                 <ImageView
                     android:id="@+id/card5_image_view"
@@ -158,47 +167,24 @@
                     android:layout_height="match_parent"
                     android:visibility="visible"
                     app:srcCompat="@drawable/ic_card_5" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv6"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-
-            android:layout_marginStart="340dp"
-            android:layout_marginTop="80dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="11dp"
-            app:layout_constraintDimensionRatio="604:875"
-
-            app:layout_fixedRotation="true">
-
             <RelativeLayout
-                android:id="@+id/relative_layout6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card6_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_6" />
+                android:id="@+id/card_5_border_layout"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
             </RelativeLayout>
-        </android.support.v7.widget.CardView>
 
+
+        </android.support.v7.widget.CardView>
 
         <View
+            android:id="@+id/card_line"
             android:layout_width="wrap_content"
             android:layout_height="2dp"
             android:layout_gravity="bottom"
             android:layout_marginBottom="49dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="statik"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="statik" />
 
 
         <View
@@ -209,14 +195,15 @@
             android:background="@color/colorPrimary"
             android:clickable="false"
             app:layout_bodyType="statik" />
+
         <View
             android:layout_width="match_parent"
             android:layout_height="1000dp"
             android:layout_gravity="top"
             android:layout_marginTop="-1050dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="statik"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="statik" />
 
         <View
             android:layout_width="1000dp"
@@ -224,16 +211,17 @@
             android:layout_gravity="left"
             android:layout_marginStart="-1001dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="statik"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="statik" />
+
         <View
             android:layout_width="1000dp"
             android:layout_height="match_parent"
             android:layout_gravity="right"
             android:layout_marginEnd="-1001dp"
             android:background="@color/colorPrimary"
-            app:layout_bodyType="statik"
-            android:clickable="false"/>
+            android:clickable="false"
+            app:layout_bodyType="statik" />
 
 
     </com.jawnnypoo.physicslayout.PhysicsFrameLayout>
