--- a/app/src/main/res/layout/fragment_gravity.xml
+++ b/app/src/main/res/layout/fragment_gravity.xml
@@ -26,69 +26,68 @@
         android:id="@+id/physics_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-
         app:bounds="true"
         app:boundsSize="20dp"
         app:gravityX="0"
         app:gravityY="9.8"
         app:layout_constraintBottom_toBottomOf="parent"
 
-
         app:physics="true"
         tools:layout_editor_absoluteX="40dp">
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cv1"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
+            android:id="@+id/gravity_layout_cv1"
+
+            android:layout_width="120dp"
+            android:layout_height="173dp"
 
             android:layout_gravity="top"
             android:layout_marginStart="0dp"
             android:layout_marginTop="0dp"
 
-
             android:background="@drawable/cardborder"
             app:cardCornerRadius="5dp"
-            app:cardElevation="1dp"
-
+            app:cardElevation="5dp"
             app:layout_constraintDimensionRatio="604:875"
 
-            app:layout_fixedRotation="true">
+            app:layout_fixedRotation="true"
+            app:layout_bodyType="dynamic"
+            >
+
+
+
+            <ImageView
+                android:id="@+id/card1_image_view"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:srcCompat="@drawable/ic_card_1"
+                />
 
             <RelativeLayout
                 android:id="@+id/card_1_border_layout"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
-                <ImageView
-                    android:id="@+id/card1_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_1" />
             </RelativeLayout>
+
         </android.support.v7.widget.CardView>
 
         <android.support.v7.widget.CardView
-            android:id="@+id/cv2"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
+            android:id="@+id/gravity_layout_cv2"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
             android:layout_gravity="top"
-            android:layout_marginStart="80dp"
-            android:layout_marginTop="20dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="50dp"
             android:background="@drawable/cardborder"
 
             app:cardCornerRadius="5dp"
-            app:cardElevation="2dp"
+            app:cardElevation="5dp"
             app:layout_constraintDimensionRatio="604:875"
             app:layout_fixedRotation="true"
-
+            app:layout_bodyType="dynamic"
             >
 
-            <RelativeLayout
-                android:id="@+id/relative_layout2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
                 <ImageView
                     android:id="@+id/card2_image_view"
@@ -96,74 +95,19 @@
                     android:layout_height="match_parent"
                     android:visibility="visible"
                     app:srcCompat="@drawable/ic_card_2" />
+            <RelativeLayout
+            android:id="@+id/card_2_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
-
         <android.support.v7.widget.CardView
-            android:id="@+id/cv4"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
+            android:id="@+id/gravity_layout_cv3"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
             android:layout_gravity="center"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="120dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="3dp"
-            app:layout_constraintDimensionRatio="604:875"
-            app:layout_fixedRotation="true"
-
-            >
-
-            <RelativeLayout
-                android:id="@+id/relative_layout4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card4_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_4" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv5"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="120dp"
-            android:background="@drawable/cardborder"
-
-            app:cardCornerRadius="5dp"
-            app:cardElevation="4dp"
-            app:layout_constraintDimensionRatio="604:875"
-            app:layout_fixedRotation="true">
-
-            <RelativeLayout
-                android:id="@+id/relative_layout5"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-
-                <ImageView
-                    android:id="@+id/card5_image_view"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_5" />
-            </RelativeLayout>
-        </android.support.v7.widget.CardView>
-
-        <android.support.v7.widget.CardView
-            android:id="@+id/cv6"
-            android:layout_width="131dp"
-            android:layout_height="192dp"
-            android:layout_gravity="center"
-            android:layout_marginStart="60dp"
             android:layout_marginTop="120dp"
             android:background="@drawable/cardborder"
 
@@ -173,17 +117,79 @@
 
             app:layout_fixedRotation="true">
 
-            <RelativeLayout
-                android:id="@+id/relative_layout6"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/card6_image_view"
+                    android:id="@+id/card3_image_view"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="visible"
-                    app:srcCompat="@drawable/ic_card_6" />
+                    app:srcCompat="@drawable/ic_card_3" />
+            <RelativeLayout
+            android:id="@+id/card_3_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/gravity_layout_cv4"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="120dp"
+            android:background="@drawable/cardborder"
+
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:layout_constraintDimensionRatio="604:875"
+            app:layout_fixedRotation="true"
+
+            >
+
+
+
+                <ImageView
+                    android:id="@+id/card4_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/ic_card_4" />
+            <RelativeLayout
+            android:id="@+id/card_4_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+            </RelativeLayout>
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:id="@+id/gravity_layout_cv5"
+            android:layout_width="120dp"
+            android:layout_height="173dp"
+            android:layout_gravity="center"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="120dp"
+            android:background="@drawable/cardborder"
+
+            app:cardCornerRadius="5dp"
+            app:cardElevation="5dp"
+            app:layout_constraintDimensionRatio="604:875"
+            app:layout_fixedRotation="true">
+
+
+
+                <ImageView
+                    android:id="@+id/card5_image_view"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:visibility="visible"
+                    app:srcCompat="@drawable/ic_card_5" />
+            <RelativeLayout
+            android:id="@+id/card_5_border_layout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
             </RelativeLayout>
         </android.support.v7.widget.CardView>
 
@@ -191,7 +197,9 @@
 
 
 
+
         <View
+            android:id="@+id/card_line"
             android:layout_width="300dp"
             android:layout_height="2dp"
             android:layout_gravity="center"
@@ -239,3 +247,4 @@
     </com.jawnnypoo.physicslayout.PhysicsFrameLayout>
 
 </android.support.constraint.ConstraintLayout>
+
